# clipping-factory

./: .gitignore  Cargo.toml  README.md
docs/: PRD.md  ROADMAP.md  SWIPE_REVIEW.md  WIREFRAME.html  ci-workflow.yml
evals/: README.md  rubric.csv  run.sh
src/: accent.rs  api.rs  captions.rs  config.rs  domain.rs  frame.rs  main.rs  media.rs  pipeline.rs  render.rs  settings.rs  state.rs  store.rs  transcribe.rs  util.rs  validate.rs
src/select/: anthropic.rs  heuristic.rs  mod.rs  openai.rs
static/: app.js  index.html  styles.css
